--- a/Client/package.json
+++ b/Client/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "framer-motion": "^12.6.2",
     "prismjs": "^1.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-simple-code-editor": "^0.14.1",
-    "rehype-highlight": "^7.0.2"
+    "react-tsparticles": "^2.12.2",
+    "rehype-highlight": "^7.0.2",
+    "three": "^0.175.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
