--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   client:
     build:
       context: ./Client
+    image: jsonbrewer/smartlint-client
     ports:
       - "5173:5173"
     volumes:
@@ -15,6 +16,7 @@ services:
   server:
     build:
       context: ./Server
+    image: jsonbrewer/smartlint-server
     ports:
       - "7600:7600"
     volumes:
