--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   client:
     build:
@@ -9,6 +7,8 @@ services:
       - "5173:5173"
     depends_on:
       - server
+    env_file:
+      - ./Client/.env
 
   server:
     build:
