--- a/.github/workflows/cicdSetup.yml
+++ b/.github/workflows/cicdSetup.yml
@@ -22,11 +22,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build images using Docker Compose
-        run: docker compose build
+      - name: Build client image
+        run: docker build -t jsonbrewer/smartlint-client ./Client
 
-      - name: Push images to Docker Hub
-        run: docker compose push
+      - name: Build server image
+        run: docker build -t jsonbrewer/smartlint-server ./Server
+
+      - name: Push client image
+        run: docker push jsonbrewer/smartlint-client
+
+      - name: Push server image
+        run: docker push jsonbrewer/smartlint-server
+
 
       - name: Set up SSH key
         run: |
