--- a/Client/dockerfile
+++ b/Client/dockerfile
@@ -1,4 +1,4 @@
-# Client/Dockerfile
+# Dockerfile for building and serving a Vite static site
 FROM node
 
 WORKDIR /app
@@ -7,7 +7,27 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+RUN npm run build 
+
+RUN npm install -g serve
 
 EXPOSE 5173
 
-CMD ["npm", "run", "dev"]
+CMD ["serve", "-s", "dist", "-l", "5173"]
+
+
+# Alternative Dockerfile for development
+
+# Client/Dockerfile
+# FROM node
+
+# WORKDIR /app
+
+# COPY package*.json ./
+# RUN npm install
+
+# COPY . .
+
+# EXPOSE 5173
+
+# CMD ["npm", "run", "dev"]
