--- a/.github/workflows/cicdSetup.yml
+++ b/.github/workflows/cicdSetup.yml
@@ -22,6 +22,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Write frontend .env file
+        run: |
+          echo "${{ secrets.CLIENT_ENV }}" | tr -d '\r' > ./Client/.env
+
       - name: Build client image
         run: docker build -t jsonbrewer/smartlint-client ./Client
 
@@ -33,7 +37,6 @@ jobs:
 
       - name: Push server image
         run: docker push jsonbrewer/smartlint-server
-
 
       - name: Set up SSH key
         run: |
