--- a/Client/dockerfile
+++ b/Client/dockerfile
@@ -1,19 +1,19 @@
 # Dockerfile for building and serving a Vite static site
 FROM node
-
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
 
 COPY . .
-RUN npm run build 
+RUN npm run build
 
-RUN npm install -g serve
-
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 5173
 
-CMD ["serve", "-s", "dist", "-l", "5173"]
+CMD ["nginx", "-g", "daemon off;"]
+
 
 
 # Alternative Dockerfile for development
