--- a/.github/workflows/cicdSetup.yml
+++ b/.github/workflows/cicdSetup.yml
@@ -46,4 +46,5 @@ jobs:
             cd ~/SmartLint
             docker compose pull
             docker compose up -d
+            docker image prune -f
           EOF
